available versions page fully tranlated (exept dates)

--- a/assets/jsons/translations/es-ES.json
+++ b/assets/jsons/translations/es-ES.json
@@ -1,5 +1,12 @@
 {
+   "misc":{
+      "download": "Descargar",
+      "verify": "Verificar"
+   },
 	"pages":{
+      "available-versions":{
+         "title": "Seleccione una versión"
+      },
 		"settings":{
 			"steam":{
             "title":"Steam",
