--- a/assets/jsons/translations/fr-FR.json
+++ b/assets/jsons/translations/fr-FR.json
@@ -1,5 +1,12 @@
 {
+   "misc":{
+      "download": "Télécharger",
+      "verify": "Vérifier"
+   },
    "pages":{
+      "available-versions":{
+         "title": "Choisi une version"
+      },
       "settings":{
          "steam":{
          	"title":"Steam",
