--- a/assets/jsons/translations/en-EN.json
+++ b/assets/jsons/translations/en-EN.json
@@ -1,5 +1,12 @@
 {
+   "misc":{
+      "download": "Download",
+      "verify": "Verify"
+   },
    "pages":{
+      "available-versions":{
+         "title": "Select a version"
+      },
       "settings":{
          "steam":{
             "title":"Steam",
