--- a/assets/jsons/translations/en-EN.json
+++ b/assets/jsons/translations/en-EN.json
@@ -4,7 +4,8 @@
       "verify": "Verify",
       "launch": "Launch",
       "mods": "Mods",
-      "maps": "Maps"
+      "maps": "Maps",
+      "cancel": "Cancel"
    },
    "pages":{
       "version-viewer":{
@@ -150,6 +151,53 @@
                "BS_ALREADY_RUNNING": "Close BeatSaber before launching it again.",
                "EXE_NOT_FINDED": "Some files seem to be missing, try to verify the files."
             }
+         }
+      }
+   },
+   "modals":{
+      "guard":{
+         "title": "Steam Guard",
+         "inputs":{
+            "guard-code":{
+               "label": "Guard Code",
+               "placeholder": "Enter your Guard code"
+            }
+         },
+         "buttons":{
+            "submit": "Login"
+         }
+      },
+      "steam-login":{
+         "title": "Steam Login",
+         "inputs":{
+            "username":{
+               "label": "Username",
+               "placeholder": "Enter your username"
+            },
+            "password":{
+               "label": "Password",
+               "placeholder": "Enter your password"
+            },
+            "stay":{
+               "label": "Stay connected"
+            }
+         },
+         "buttons":{
+            "submit": "Login"
+         }  
+      },
+      "bs-uninstall":{
+         "title": "Uninstall",
+         "description": "Are you sure you want to uninstall BeatSaber {version} ? You will have to download it again to play it.",
+         "buttons":{
+            "submit": "Uninstall"
+         }
+      },
+      "install-folder":{
+         "title": "Installation folder",
+         "description": "Changing the default installation folder will result in moving all installed data to the new folder.",
+         "buttons":{
+            "submit": "Choose folder"
          }
       }
    }
