add translation for the new action

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -17,6 +17,7 @@
          "dropdown":{
             "open-folder": "Open folder",
             "verify-files": "Verify files",
+            "clone": "Clone",
             "uninstall": "Uninstall"
          }
       },
