add translations for custom version actions

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -18,6 +18,7 @@
             "open-folder": "Open folder",
             "verify-files": "Verify files",
             "clone": "Clone",
+            "edit": "Edit",
             "uninstall": "Uninstall"
          }
       },
@@ -156,6 +157,24 @@
                "EXE_NOT_FINDED": "Some files seem to be missing, try to verify the files."
             }
          }
+      },
+      "custom-version":{
+         "errors":{
+            "titles":{
+               "CantEditSteam": "Unable to edit",
+               "CantRename": "Renaming impossible",
+               "VersionAlreadExist": "This version already exists",
+               "CantClone": "Cloning impossible"
+            },
+            "msg":{
+               "CantEditSteam": "You can't edit the Steam version. You can clone it though."
+            }
+         },
+         "success":{
+            "titles":{
+               "CloningFinished": "Cloning complete 🎉"
+            }
+         }
       }
    },
    "modals":{
@@ -202,6 +221,19 @@
          "description": "Changing the default installation folder will result in moving all installed data to the new folder.",
          "buttons":{
             "submit": "Choose folder"
+         }
+      },
+      "edit-version":{
+         "title": "Edit the version",
+         "buttons":{
+            "submit": "Edit"
+         }
+      },
+      "clone-version":{
+         "title": "Clone version",
+         "description": "Cloning the version allows you to separate additional BeatSaber content between two versions.",
+         "buttons":{
+            "submit": "Clone"
          }
       }
    }
