--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -237,5 +237,19 @@
             "submit": "Clone"
          }
       }
+   },
+   "dateformat":{
+        "dayNames": [
+            "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat",
+            "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"
+        ],
+        "monthNames": [
+            "Jan", "Feb", "Mar", "Apr", "May", "June", "Jul", "Aug", "Sept", "Oct", "Nov", "Dec",
+            "January", "February", "March", "April", "May", "June",
+            "July", "August", "September", "October", "November", "December"
+        ],
+        "timeNames": [
+            "a", "p", "am", "pm", "A", "P", "AM", "PM"
+        ]
    }
 }
