--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -238,5 +238,19 @@
             "submit": "Clonar"
          }
       }
-   }
+   },
+   "dateformat":{
+        "dayNames": [
+            "Dom", "Lun", "Mar", "Mié", "Jue", "Vie", "Sáb",
+            "Domingo", "Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado"
+        ],
+        "monthNames": [
+            "Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic",
+            "Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio",
+            "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"
+        ],
+        "timeNames": [
+            "a", "p", "am", "pm", "A", "P", "AM", "PM"
+        ]
+    }
 }
